Add a standard footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,30 +1,31 @@
 <!-- Footer -->
 <footer>
     <div class="container">
-        <div class="row">
-            <div class="col-md-8">
-                <ul class="list-inline">
-                    <li>
-                        <a href="#home">Home</a>
-                    </li>
-                    <li class="footer-menu-divider">&sdot;</li>
-                    <li>
-                        <a href="#about">About</a>
-                    </li>
-                    <li class="footer-menu-divider">&sdot;</li>
-                    <li>
-                        <a href="#services">Services</a>
-                    </li>
-                    <li class="footer-menu-divider">&sdot;</li>
-                    <li>
-                        <a href="#contact">Contact</a>
-                    </li>
-                </ul>
-                <p class="copyright text-muted small">Copyright &copy; {{ site.title }} All Rights Reserved</p>
-            </div>
-            <div class="col-md-4">
-                Credits: Landing Page is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com/">Start Bootstrap</a>.
-            </div>
+      <div class="row">
+        <div class="row justify-content-md-center">
+          <div class="col col-md-offset-3 col-md-2">
+            <img class="img-responsive"
+                 src="img/UoI_wordmark.png"
+                 alt="University of Illinois wordmark">
+          </div>
+          <div class="col col-md-2">
+            <img class="img-responsive"
+                 src="img/Cornell_wordmark.svg"
+                 alt="Cornell University wordmark">
+          </div>
+          <div class="col col-md-2">
+            <img class="img-responsive"
+                 src="img/UNC_wordmark.png"
+                 alt="University of North Carolina wordmark">
+          </div>
         </div>
+        <p class="copyright m-0 text-center text-muted small">
+        This material is based upon work supported by the National Science Foundation
+        under Grants No. <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2209628">OAC-2209628</a>,
+        <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2209629">OAC-2209629</a>,
+        <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2209630">OAC-2209630</a>.
+        Copyright &copy; {{ site.title }} All Rights Reserved
+        </p>
+      </div>
     </div>
 </footer>
