--- a/_includes/page_content.html
+++ b/_includes/page_content.html
@@ -1,5 +1,5 @@
 <!-- Page Content -->
-{% for post in site.posts reversed %}
+{% for post in site.posts %}
   {% capture thecycle %}{% cycle 'odd', 'even' %}{% endcapture %}
     {% if thecycle == 'odd' %}
     <div class="content-section-a">
@@ -7,14 +7,14 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-lg-5 col-sm-6">
+                <div class="col-lg-8">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">{{ post.title }}</h2>
                     {{ post.description }}
                 </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/services/{{ post.img }}" alt="">
+                <div class="col-lg-4" style="padding-top: 70px; padding-left: 50px">
+                   <i class="fa fa-{{post.icon}} fa-5x" style="vertical-align: middle; text-align: center"></i>
                 </div>
             </div>
 
@@ -30,14 +30,14 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                <div class="col-lg-3  text-center" style="padding-top: 70px;">
+                   <i class="fa fa-{{post.icon}} fa-5x" style="vertical-align: middle; text-align: center"></i>
+                </div>
+                <div class="col-lg-8">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">{{ post.title }}</h2>
                     {{ post.description }}
-                </div>
-                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                  <img class="img-responsive" src="img/services/{{ post.img }}" alt="">
                 </div>
             </div>
 
