--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -4,6 +4,9 @@
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 
+.fa-5x {
+    vertical-align: middle;
+}
 body,
 html {
     width: 100%;
@@ -27,24 +30,26 @@ h6 {
 }
 
 .intro-header {
-    padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
-    padding-bottom: 50px;
+    padding-top: 10px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
+    padding-bottom: 10px;
     text-align: center;
-    color: #f8f8f8;
-    background: url(../img/intro-bg.jpg) no-repeat center center;
-    background-size: cover;
+    color: #FFFFFF;
+    background: url(../img/trace-bg.jpg) no-repeat center center;
+    box-shadow: inset 0 0 0 1000px rgba(0,0,0,.5);
+    background-size: contain;
+    background-color: #000000;
 }
 
 .intro-message {
     position: relative;
-    padding-top: 20%;
-    padding-bottom: 20%;
+    padding-top: 10%;
+    padding-bottom: 10%;
 }
 
 .intro-message > h1 {
     margin: 0;
-    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
-    font-size: 5em;
+    #text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+    font-size: 2.5em;
 }
 
 .intro-divider {
@@ -54,7 +59,7 @@ h6 {
 }
 
 .intro-message > h3 {
-    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+    #text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
 }
 
 @media(max-width:767px) {
