Styling changes, added about and contact sections

--- a/_includes/page_content.html
+++ b/_includes/page_content.html
@@ -13,7 +13,7 @@
                     <h2 class="section-heading">{{ post.title }}</h2>
                     {{ post.description }}
                 </div>
-                <div class="col-lg-4" style="padding-top: 70px; padding-left: 50px">
+                <div class="col-lg-4" style="padding-top: 10%; padding-left: 10%">
                    <i class="fa fa-{{post.icon}} fa-5x" style="vertical-align: middle; text-align: center"></i>
                 </div>
             </div>
@@ -30,7 +30,7 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-lg-3  text-center" style="padding-top: 70px;">
+                <div class="col-lg-3  text-center" style="padding-top: 10%;">
                    <i class="fa fa-{{post.icon}} fa-5x" style="vertical-align: middle; text-align: center"></i>
                 </div>
                 <div class="col-lg-8">
