--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,16 +1,18 @@
-<div class="banner">
-
+<section id="contact" class="contact">
     <div class="container">
 
         <div class="row">
-            <div class="col-lg-6">
-                <h2>Connect to Start Bootstrap:</h2>
+            <div class="col-lg-12 text-center">
+                If you are interested in contributing to TRACE or have
+                questions, you can reach us via following:
             </div>
-            <div class="col-lg-6">
-                <ul class="list-inline banner-social-buttons">
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <ul class="list-inline banner-social-buttons mx-auto justify-content-center">
                     {% for social in site.social %}
                     <li>
-                        <a href="{{ social.url }}" class="btn btn-default btn-lg"><i class="fa fa-{{ social.title }} fa-fw"></i> <span class="network-name">{{ social.title }}</span></a>
+                        <a href="{{ social.url }}" class="btn btn-default btn-lg"><i class="fa fa-{{ social.icon }} fa-fw"></i> <span class="network-name">{{ social.title }}</span></a>
                     </li>
                     {% endfor %}
                 </ul>
@@ -19,6 +21,4 @@
 
     </div>
     <!-- /.container -->
-
-</div>
-<!-- /.banner -->
+</section>
