--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,10 +15,13 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="#">About</a>
+                    <a href="/trace-specification">Specification</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="#about">About</a>
+                </li>
+                <li>
+                    <a href="#contact">Contact</a>
                 </li>
             </ul>
         </div>
@@ -37,14 +40,6 @@
                 <div class="intro-message">
                     <h1>{{ page.title }}</h1>
                     <h3>{{ page.subTitle }}</h3>
-                    <hr class="intro-divider">
-                    <ul class="list-inline intro-social-buttons">
-                        {% for social in site.social %}
-                        <li>
-                            <a href="{{ social.url }}" class="btn btn-default btn-lg"><i class="fa fa-{{ social.title }} fa-fw"></i> <span class="network-name">{{ social.title }}</span></a>
-                        </li>
-                        {% endfor %}
-                    </ul>
                 </div>
             </div>
         </div>
