--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -32,11 +32,12 @@ h6 {
 .intro-header {
     padding-top: 10px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
     padding-bottom: 10px;
+    padding-top: 20px;
     text-align: center;
     color: #FFFFFF;
     background: url(../img/trace-bg.jpg) no-repeat center center;
     box-shadow: inset 0 0 0 1000px rgba(0,0,0,.5);
-    background-size: contain;
+    background-size: cover;
     background-color: #000000;
 }
 
@@ -73,7 +74,8 @@ h6 {
 
     ul.intro-social-buttons > li {
         display: block;
-        margin-bottom: 20px;
+        margin-top: 3%;
+        margin-bottom: 3%;
         padding: 0;
     }
 
@@ -94,12 +96,12 @@ h6 {
 }
 
 .content-section-a {
-    padding: 50px 0;
+    padding: 1% 0;
     background-color: #f8f8f8;
 }
 
 .content-section-b {
-    padding: 50px 0;
+    padding: 1% 0;
     border-top: 1px solid #e7e7e7;
     border-bottom: 1px solid #e7e7e7;
 }
@@ -131,8 +133,8 @@ h6 {
 }
 
 .banner-social-buttons {
-    float: right;
-    margin-top: 0;
+    text-align: center;
+    margin;
 }
 
 @media(max-width:1199px) {
@@ -145,8 +147,7 @@ h6 {
 @media(max-width:767px) {
     .banner h2 {
         margin: 0;
-        text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
-        font-size: 3em;
+        font-size: 1em;
     }
 
     ul.banner-social-buttons > li {
@@ -167,4 +168,18 @@ footer {
 
 p.copyright {
     margin: 15px 0 0;
+}
+
+section.about {
+    color: #fff;
+    font-size: 1.3em;
+    font-style: normal;
+    background: #76b5c5;
+    padding-bottom: 1%;
+}
+
+section.contact{
+    padding-top: 1%;
+    padding-bottom: 1%;
+    font-size: 1.3em;
 }
