--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,10 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="/trace-specification">Specification</a>
+                    <a href="/trace-specification/docs/specification.html">Specification</a>
+                </li>
+                <li>
+                    <a href="/trace-specification/">Infrastructure</a>
                 </li>
                 <li>
                     <a href="#about">About</a>
