Added image attribution

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,4 +51,5 @@
     <!-- /.container -->
 
 </div>
+<span style="padding-left: 10px; font-size: .8em; font-weight: normal""> Photo by <a href="https://unsplash.com/@jan_huber?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Jan Huber</a> / <a href="https://unsplash.com/photos/3Btf2cTAGKs?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></span>
 <!-- /.intro-header -->
