Transitioning to more dynamic setup #4

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
         under Grants No. <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2209628">OAC-2209628</a>,
         <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2209629">OAC-2209629</a>,
         <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2209630">OAC-2209630</a>.
-        Copyright &copy; {{ site.title }} All Rights Reserved
+        Copyright &copy; {{ site.title }}. All Rights Reserved
         </p>
       </div>
     </div>
