--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
             <ul class="nav navbar-nav navbar-right">
                 {% for link in site.menu %}
                 <li>
-                    <a href="{{ link.url }}">{{ link.title }}</a>
+                    <a href="{{ link.url | relative_url }}">{{ link.title }}</a>
                 </li>
                 {% endfor %}
             </ul>
