--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,9 +4,7 @@
 
 	<body>
 		{% include header.html %}
-		
-		{{ content }}
-		
+		{% include home_content.html %}
                 {% include about.html %}
                 {% include contact.html %}
 		{% include footer.html %}
