--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 	<body>
 		{% include header.html %}
 		
-		{{ post.content }}
+		{{ page.content }}
 		
                 {% include about.html %}
                 {% include contact.html %}
