--- a/_layouts/job.html
+++ b/_layouts/job.html
@@ -1,3 +1,23 @@
 ---
 layout: default
 ---
+
+<div class="content-section-a">
+
+    <div class="container">
+
+        <div class="row">
+            <div class="col-lg-8">
+                <hr class="section-heading-spacer">
+                <div class="clearfix"></div>
+                <h2 class="section-heading">{{ page.title }}</h2>
+                
+                    {{ page.content }}
+            </div>
+        </div>
+
+    </div>
+    <!-- /.container -->
+
+</div>
+<!-- /.content-section-a -->
