--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -22,7 +22,7 @@
                     <p class="lead">
                     <a href="{{ post.url | relative_url }}" alt="Link to full description">{{ post.description }}</a> </p>
                 </div>
-                <div class="col-lg-4" style="padding-top: 10%; padding-left: 10%">
+                <div class="col-lg-4" style="padding-left: 10%">
                     <img class="img-responsive"
                     src="{{ post.img | relative_url }}"
                     alt="{{ post.alt }}">
@@ -41,7 +41,7 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-lg-3  text-center" style="padding-top: 10%;">
+                <div class="col-lg-3  text-center" >
                     <img class="img-responsive"
                     src="{{ post.img | relative_url }}"
                     alt="{{ post.alt }}">
