--- a/_layouts/job.html
+++ b/_layouts/job.html
@@ -1,6 +1,10 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html>
+	{% include head.html %}
+
+	<body>
+		{% include header.html %}
+		
 
 <!-- layout jobs -->
 <div class="content-section-a">
@@ -22,3 +26,11 @@ layout: default
 
 </div>
 <!-- /.content-section-a -->
+
+		
+{% include about.html %}
+{% include contact.html %}
+{% include footer.html %}
+{% include js.html %}
+</body>
+</html>
