--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">{{ site.title }}</a>
+            <a class="navbar-brand" href="{{ site.url }}">{{ site.title }}</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         {% if site.menu.size > 0 %}
@@ -17,7 +17,7 @@
             <ul class="nav navbar-nav navbar-right">
                 {% for link in site.menu %}
                 <li>
-                    <a href="{{ link.url }}">{{ link.title }}</a>
+                    <a href="{{ link.url | relative_url }}">{{ link.title }}</a>
                 </li>
                 {% endfor %}
             </ul>
@@ -46,5 +46,5 @@
     <!-- /.container -->
 
 </div>
-<span style="padding-left: 10px; font-size: .8em; font-weight: normal""> Photo by <a href="https://unsplash.com/@jan_huber?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Jan Huber</a> / <a href="https://unsplash.com/photos/3Btf2cTAGKs?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></span>
+<span style="padding-left: 10px; font-size: .8em; font-weight: normal"> Photo by <a href="https://unsplash.com/@jan_huber?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Jan Huber</a> / <a href="https://unsplash.com/photos/3Btf2cTAGKs?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></span>
 <!-- /.intro-header -->
