Fix ADA II compliance

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -176,7 +176,7 @@ section.about {
     color: #fff;
     font-size: 1.3em;
     font-style: normal;
-    background: #76b5c5;
+    background: #337ab7;
     padding-bottom: 1%;
 }
 
